--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>It works!</h1>
 
 <form accept-charset="UTF-8" action="/users" method="post">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <label for="username">Username :</label>
     <input type="text" id="username" name="username"><br><br>
     <label for="email">Email:</label>
