--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,10 @@
-<h1>It works!</h1>
-
 <form accept-charset="UTF-8" action="/users" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <label for="username">Username :</label>
-    <input type="text" id="username" name="username"><br><br>
+    <input type="text" id="username" name="username" value="<%= @user["username"] %>"><br><br>
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email"><br><br>
+    <input type="email" id="email" name="email" value="<%= @user["email"] %>"><br><br>
     <label for="password">Password :</label>
-    <input type="password" id="password" name="password"><br><br>
+    <input type="password" id="password" name="password" ><br><br>
     <input type="submit" value="Submit">
 </form>
