--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,17 @@
-<form accept-charset="UTF-8" action="/users" method="post">
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <label for="username">Username :</label>
-    <input type="text" id="username" name="user[username]" value="<%= @user["username"] %>"><br><br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="user[email]" value="<%= @user["email"] %>"><br><br>
-    <label for="password">Password :</label>
-    <input type="password" id="password" name="user[password]" ><br><br>
-    <input type="submit" value="Submit">
-</form>
+
+
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag(:username, "Username:") %>
+  <%= text_field_tag(:username, @user["username"]) %>
+  <br>
+  <br>
+  <%= label_tag(:email, "Email:") %>
+  <%= email_field_tag(:email, @user["email"]) %>
+  <br>
+  <br>
+  <%= label_tag(:password, "Password:") %>
+  <%= password_field_tag(:password)%>
+  <br>
+  <br>
+  <%= submit_tag() %>
+<% end %>
