--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-
+<!-- 
 
 <%= form_tag("/users", method: "post") do %>
   <%= label_tag(:username, "Username:") %>
@@ -14,4 +14,4 @@
   <br>
   <br>
   <%= submit_tag() %>
-<% end %>
+<% end %> -->
