--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,16 @@
+<!--
+<%# <form accept-charset="UTF-8" action="/users" method="post">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token"> %>
+    <label for="username">Username :</label>
+    <input type="text" id="username" name="user[username]" value="<%= @user["username"] %>"><br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="user[email]" value="<%= @user["email"] %>"><br><br>
+    <label for="password">Password :</label>
+    <input type="password" id="password" name="user[password]" ><br><br>
+    <input type="submit" value="Submit">
+</form> %>
+-->
 <!-- 
-
 <%= form_tag("/users", method: "post") do %>
   <%= label_tag(:username, "Username:") %>
   <%= text_field_tag(:username, @user["username"]) %>
@@ -15,10 +26,16 @@
   <br>
   <%= submit_tag() %>
 <% end %> -->
+
 <%= form_for @user do |f| %>
-    Username :
-    <%= f.text_field :username %><br /> Email :
-        <%= f.email_field :email, :value => 'test@email.com' %><br /> Password :
-            <%= f.password_field :password %><br />
-                <%= f.submit %>
-                    <% end %>
+  Username :
+  <%= f.text_field :username, placeholder: 'Enter username' %><br />
+  <br> 
+  Email :
+  <%= f.email_field :email, placeholder: 'test@email.com' %><br /> 
+  <br>
+  Password :
+  <%= f.password_field :password %><br />
+  <br>
+  <%= f.submit %>
+<% end %>
