--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,6 +28,11 @@
 <% end %> -->
 
 <%= form_for @user do |f| %>
+  <ul>
+  <% @user.errors.full_messages.each do |error| %>
+    <li style="color:red;"><%= error %></li>
+  <% end %>
+  </ul>
   Username :
   <%= f.text_field :username, placeholder: 'Enter username' %><br />
   Email :
